# fractals

./: .gitignore  Cargo.toml  README.md  settings.yml
src/: fractal.rs  main.rs  settings.rs
src/menu/: mod.rs
